--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style>
+        p{
+            color: blue;
+        }
+    </style> -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>¡Buenas! Soy Alejandro</h1>
+    <h1 style="color: crimson;">¡Buenas! Soy Alejandro</h1>
     <ul>
         <li>Alejandro Aymo</li>
         <li>30 años</li>
