--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>Escuchar Música, generalmente Rock y Metal, aunque me gustan mucho otros géneros como el Funk y el Blues</li>
             <li>Tocar guitarra</li>
         </ul>
+        <b><p id="selectorId">Texto con selector</p></b>
+
+        <div class="caja">100px</div>
+
         <h2>Formulario de contacto:</h2>
 
         <form>
@@ -60,14 +64,14 @@
             <br/>
             <br/>
 
-            <label for="checkbox">He leido y acepto los términos y condiciones</label>
-            <input type="checkbox" id="checkbox">
-
-            <br/>
-            <br/>
-
             <label for="texto">Ingrese un comentario:</label><br/>
             <textarea name="texto" id="texto" rows="10" cols="50" minlength="5" maxlength="100"></textarea>
+            
+            <br/>
+            <br/>
+            
+            <label for="checkbox">He leido y acepto los términos y condiciones</label>
+            <input type="checkbox" id="checkbox">
 
             <br/>
             <br/>
