--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         }
     </style> -->
     <link rel="stylesheet" href="./style.css">
+    <!-- Fuente personalizada -->
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+BE+VLG:wght@100..400&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 style="color: crimson;">¡Buenas! Soy Alejandro</h1>
@@ -30,6 +32,14 @@
         <b><p id="selectorId">Texto con selector</p></b>
 
         <div class="caja">100px</div>
+
+        <div class="font-fa">
+            <p>Texto con fuente personalizada</p>
+        </div>
+
+        <div class="font-style">
+            Texto en italica
+        </div>
 
         <h2>Formulario de contacto:</h2>
 
